--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,3 +7,9 @@ requires-python = ">=3.13"
 dependencies = [
     "pydantic>=2.11.7",
 ]
+
+[dependency-groups]
+dev = [
+    "mypy>=1.17.1",
+    "ruff>=0.12.7",
+]
